WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
39531
REGRESSION(
r59977
): platform/mac/fast/AppleScript/001.html failure
https://bugs.webkit.org/show_bug.cgi?id=39531
Summary
REGRESSION(r59977): platform/mac/fast/AppleScript/001.html failure
Kent Tamura
Reported
2010-05-22 08:46:29 PDT
It has failed since
http://trac.webkit.org/changeset/59975
Attachments
Patch
(6.03 KB, patch)
2010-05-22 16:26 PDT
,
Maciej Stachowiak
mrowe
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kent Tamura
Comment 1
2010-05-22 08:49:13 PDT
Added it to mac/Skipped by
r60003
.
Simon Fraser (smfr)
Comment 2
2010-05-22 08:59:10 PDT
Regressions are P1
Adam Barth
Comment 3
2010-05-22 09:06:38 PDT
Maciej analyzed this last night and determined it was cause by
http://trac.webkit.org/changeset/59977
. This hoses the following test case: <script>document.write("<script>throw 'Badness 10,000'</scr" + "ipt>");</script> The exception should show up in the inspector but no longer does.
Maciej Stachowiak
Comment 4
2010-05-22 14:21:43 PDT
Skipping tests is not a great way to deal with a regression.
Maciej Stachowiak
Comment 5
2010-05-22 16:26:26 PDT
Created
attachment 56794
[details]
Patch
Maciej Stachowiak
Comment 6
2010-05-22 17:51:15 PDT
Committed in
http://trac.webkit.org/changeset/60026
WebKit Review Bot
Comment 7
2010-05-22 18:05:53 PDT
http://trac.webkit.org/changeset/60026
might have broken GTK Linux 32-bit Release
Eric Seidel (no email)
Comment 8
2010-05-22 21:24:03 PDT
This checkin broke a bunch of bots.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug