REGRESSION(r59977): platform/mac/fast/AppleScript/001.html failure https://bugs.webkit.org/show_bug.cgi?id=39531

Reviewed by Mark Rowe.

Revert r59977 and r59943. These changes caused some exceptions to no longer be
reported in the inspector; I can't tell what they were originally trying to fix
so I am not sure how to fix them other than by reverting.

WebCore:

Covered by existing test platform/mac/fast/AppleScript/001.html, and
also added fast/dom/nested-script-exceptions.html to demonstrate the wider
consequences of the original change.

* bindings/js/ScriptController.cpp:
(WebCore::ScriptController::ScriptController):
(WebCore::ScriptController::evaluateInWorld):
* bindings/js/ScriptController.h:

LayoutTests:

Unskipped the test that was broken, and also added a new test.

* fast/dom/nested-script-exceptions-expected.txt: Added.
* fast/dom/nested-script-exceptions.html: Added. Shows that inspector functionality
would break in a meaningful way if the reverted change was allowed to stand.
* platform/mac/Skipped:



Canonical link: https://commits.webkit.org/51104@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60026 268f45cc-cd09-0410-ab3c-d52691b4dbfc